# bad-ice-cream

./: .gitignore  2025OOPL_Final.md  CMakeLists.txt  README.md  config.json
PTSD/include/: config.hpp
PTSD/src/Core/: Context.cpp
PTSD/src/Util/: BGM.cpp  SFX.cpp
Resources/: Nothing_Important.cpp
final/: 2025OOPL_Final.md
include/: AnimatedCharacter.hpp  App.hpp  AppUtil.hpp  BGM.hpp  BackGround.hpp  BackgroundImage.hpp  Block.hpp  Button.hpp  CampFire.hpp  Character.hpp  Enemies.hpp  Floor.hpp  Fruit.hpp  Ice.hpp  MainCharacter.hpp  Namespace_Model.hpp  Phase.hpp  PhaseResourceManger.hpp  Picture.hpp  TaskText.hpp  Text.hpp  TurnOffThings.hpp  Wall.hpp
src/: AnimatedCharacter.cpp  AppEnd.cpp  AppStart.cpp  AppUpdate.cpp  AppUtil.cpp  AutoMove.cpp  BackGround.cpp  Block.cpp  Button.cpp  CampFire.cpp  Character.cpp  CharacterUpdate.cpp  Enemies.cpp  Floor.cpp  Fruit.cpp  FruitUpdate.cpp  Ice.cpp  MainCharacter.cpp  NameSpace_Model.cpp  PhaseChange.cpp  PhaseManager.cpp  Picture.cpp  TurnOffThings.cpp  TurnOnLV.cpp  Wall.cpp
